--- a/Nop.Plugin.Payments.AliPay/Views/PaymentAliPay/Configure.cshtml
+++ b/Nop.Plugin.Payments.AliPay/Views/PaymentAliPay/Configure.cshtml
@@ -7,49 +7,51 @@
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    <table class="adminContent">
-        <tr>
-            <td class="adminTitle">
-                @Html.NopLabelFor(model => model.SellerEmail):
-            </td>
-            <td class="adminData">
-                @Html.EditorFor(model => model.SellerEmail)
-                @Html.ValidationMessageFor(model => model.SellerEmail)
-            </td>
-        </tr>
-        <tr>
-            <td class="adminTitle">
-                @Html.NopLabelFor(model => model.Key):
-            </td>
-            <td class="adminData">
-                @Html.EditorFor(model => model.Key)
-                @Html.ValidationMessageFor(model => model.Key)
-            </td>
-        </tr>
-        <tr>
-            <td class="adminTitle">
-                @Html.NopLabelFor(model => model.Partner):
-            </td>
-            <td class="adminData">
-                @Html.EditorFor(model => model.Partner)
-                @Html.ValidationMessageFor(model => model.Partner)
-            </td>
-        </tr>
-        <tr>
-            <td class="adminTitle">
-                @Html.NopLabelFor(model => model.AdditionalFee):
-            </td>
-            <td class="adminData">
-                @Html.EditorFor(model => model.AdditionalFee)
-                @Html.ValidationMessageFor(model => model.AdditionalFee)
-            </td>
-        </tr>
-        <tr>
-            <td colspan="2">
-                <button type="submit" name="save" value="save" class="k-button">
-                    Save</button>
-            </td>
-        </tr>
-    </table>
-    
+    <div class="panel-group">
+        <div class="panel panel-default">
+            <div class="panel-body">
+                <div class="form-group">
+                    <div class="col-md-3">
+                        @Html.NopLabelFor(model => model.SellerEmail)
+                    </div>
+                    <div class="col-md-9">
+                        @Html.NopEditorFor(model => model.SellerEmail)
+                        @Html.ValidationMessageFor(model => model.SellerEmail)
+                    </div>
+                </div>
+                <div class="form-group">
+                    <div class="col-md-3">
+                        @Html.NopLabelFor(model => model.Key)
+                    </div>
+                    <div class="col-md-9">
+                        @Html.NopEditorFor(model => model.Key)
+                        @Html.ValidationMessageFor(model => model.Key)
+                    </div>
+                </div>
+                <div class="form-group">
+                    <div class="col-md-3">
+                        @Html.NopLabelFor(model => model.Partner)
+                    </div>
+                    <div class="col-md-9">
+                        @Html.NopEditorFor(model => model.Partner)
+                        @Html.ValidationMessageFor(model => model.Partner)
+                    </div>
+                </div>
+                <div class="form-group">
+                    <div class="col-md-3">
+                        @Html.NopLabelFor(model => model.AdditionalFee)
+                    </div>
+                    <div class="col-md-9">
+                        @Html.NopEditorFor(model => model.AdditionalFee)
+                        @Html.ValidationMessageFor(model => model.AdditionalFee)
+                    </div>
+                </div>
+                <div class="form-group">
+                    <div class="col-md-9 col-md-offset-3">
+                        <input type="submit" name="save" class="btn bg-blue" value="@T("Admin.Common.Save")"/>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 }
