--- a/Nop.Plugin.Payments.AliPay/Views/PaymentAliPay/PaymentInfo.cshtml
+++ b/Nop.Plugin.Payments.AliPay/Views/PaymentAliPay/PaymentInfo.cshtml
@@ -1,13 +1,11 @@
 ﻿@{
     Layout = "";
 }
-@model Nop.Plugin.Payments.AliPay.Models.PaymentInfoModel
-@using Nop.Web.Framework;
 
 <table width="100%" cellpadding="0" cellspacing="0">
     <tr>
         <td>
-            <b>@T("Plugins.Payments.AliPay.RedirectionTip")</b>
+            <p><b>@T("Plugins.Payments.AliPay.RedirectionTip")</b></p>
         </td>
     </tr>
 </table>
