--- a/Nop.Plugin.Payments.AliPay/Views/Configure.cshtml
+++ b/Nop.Plugin.Payments.AliPay/Views/Configure.cshtml
@@ -1,57 +1,56 @@
 ﻿@{
-    Layout = "";
+    Layout = "_ConfigurePlugin";
 }
+
 @model ConfigurationModel
 @using Nop.Plugin.Payments.AliPay.Models;
-@using Nop.Web.Framework;
-@using (Html.BeginForm())
-{
-    @Html.AntiForgeryToken()
+
+<form asp-controller="PaymentAliPay" asp-action="Configure" method="post">
     <div class="panel-group">
         <div class="panel panel-default">
             <div class="panel-body">
                 <div class="form-group">
                     <div class="col-md-3">
-                        @Html.NopLabelFor(model => model.SellerEmail)
+                        <nop-label asp-for="SellerEmail" />
                     </div>
                     <div class="col-md-9">
-                        @Html.NopEditorFor(model => model.SellerEmail)
-                        @Html.ValidationMessageFor(model => model.SellerEmail)
+                        <nop-editor asp-for="SellerEmail" />
+                        <span asp-validation-for="SellerEmail"></span>
                     </div>
                 </div>
                 <div class="form-group">
                     <div class="col-md-3">
-                        @Html.NopLabelFor(model => model.Key)
+                        <nop-label asp-for="Key" />
                     </div>
                     <div class="col-md-9">
-                        @Html.NopEditorFor(model => model.Key)
-                        @Html.ValidationMessageFor(model => model.Key)
+                        <nop-editor asp-for="Key" />
+                        <span asp-validation-for="Key"></span>
                     </div>
                 </div>
                 <div class="form-group">
                     <div class="col-md-3">
-                        @Html.NopLabelFor(model => model.Partner)
+                        <nop-label asp-for="Partner" />
                     </div>
                     <div class="col-md-9">
-                        @Html.NopEditorFor(model => model.Partner)
-                        @Html.ValidationMessageFor(model => model.Partner)
+                        <nop-editor asp-for="Partner" />
+                        <span asp-validation-for="Partner"></span>
                     </div>
                 </div>
                 <div class="form-group">
                     <div class="col-md-3">
-                        @Html.NopLabelFor(model => model.AdditionalFee)
+                        <nop-label asp-for="AdditionalFee" />
                     </div>
                     <div class="col-md-9">
-                        @Html.NopEditorFor(model => model.AdditionalFee)
-                        @Html.ValidationMessageFor(model => model.AdditionalFee)
+                        <nop-editor asp-for="AdditionalFee" />
+                        <span asp-validation-for="AdditionalFee"></span>
                     </div>
                 </div>
                 <div class="form-group">
                     <div class="col-md-9 col-md-offset-3">
-                        <input type="submit" name="save" class="btn bg-blue" value="@T("Admin.Common.Save")"/>
+                        <input type="submit" name="save" class="btn bg-blue" value="@T("Admin.Common.Save")" />
                     </div>
                 </div>
             </div>
         </div>
     </div>
-}
+</form>
